--- a/Customer/src/main/res/values/strings.xml
+++ b/Customer/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">Costumer</string>
+    <string name="app_name" translatable="false">Customer</string>
     <string name="edit">Edit</string>
     <string name="save">Save</string>
     <string name="not_set">Not set yet</string>
@@ -10,4 +10,8 @@
     <string name="phone">Phone</string>
     <string name="personal_info">Personal Info</string>
     <string name="description">Description</string>
+    <string name="user_photo">User Photo</string>
+    <string name="select_picture">Select picture</string>
+    <string name="camera" translatable="false">Camera</string>
+    <string name="gallery">Gallery</string>
 </resources>
